# Spider

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
spider/: CMakeLists.txt
spider/assets/: CMakeLists.txt  Deck.xcf  Pointer.xcf
spider/es_shaders/: CMakeLists.txt  screen.frag  screen.vert  sprite.frag  sprite.vert  text.frag  text.vert
spider/shaders/: screen.frag  screen.vert  sprite.vert  text.frag  text.vert
spider/source/: NSCancelAction.cpp  NSDealAction.cpp  NSGame.cpp  NSGameMode.cpp  NSGameState.cpp  NSResetAction.cpp  NSScene.cpp  NSSelectAction.cpp  NSUndoAction.cpp  SPBackground.cpp  SPCancelAction.cpp  SPCard.cpp  SPCursor.cpp  SPDealAction.cpp  SPFrameCounterEntity.cpp  SPGame.cpp  SPGameStripped.cpp  SPGameplayAction.cpp  SPMainMenu.cpp  SPMoveAction.cpp  SPPilable.cpp  SPPile.cpp  SPPointer.cpp  SPScene.cpp  SPSelectAction.cpp  SPSnapComponent.cpp  SPSnapValidatorFourSuits.cpp  SPUndoAction.cpp
spider/source/include/: MoveEntry.h  NSCancelAction.h  NSDealAction.h  NSEvent.h  NSGame.h  NSGameMode.h  NSGameState.h  NSResetAction.h  NSScene.h  NSSelectAction.h  NSUndoAction.h  SPBackground.h  SPCancelAction.h  SPCard.h  SPCursor.h  SPDealAction.h  SPFrameCounterEntity.h  SPGame.h  SPGameplayAction.h  SPMainMenu.h  SPMoveAction.h  SPPilable.h  SPPile.h  SPPointer.h  SPScene.h  SPSelectAction.h  SPSnapComponent.h  SPSnapValidator.h  SPSnapValidatorFourSuits.h  SPUndoAction.h
